[package]
name = "verify"
version = "0.1.0"
authors = ["taotao54321 <taotao54321@gmail.com>"]
edition = "2018"

[dependencies]
proconio = { version = "=0.3.6", features = ["derive"] }

taocp-prelude = { path = "../taocp-prelude" }
taocp-union-find = { path = "../taocp-union-find" }
taocp-modint = { path = "../taocp-modint" }
taocp-modint-math = { path = "../taocp-modint-math" }
