[package]
name = "verify"
version = "0.1.0"
authors = ["taotao54321 <taotao54321@gmail.com>"]
edition = "2018"

[dependencies]
proconio = { version = "=0.3.6", features = ["derive"] }

taocp-bit = { path = "../taocp-bit" }
taocp-graph = { path = "../taocp-graph" }
taocp-graph-sssp = { path = "../taocp-graph-sssp" }
taocp-modint = { path = "../taocp-modint" }
taocp-modint-math = { path = "../taocp-modint-math" }
taocp-num-int = { path = "../taocp-num-int" }
taocp-prelude = { path = "../taocp-prelude" }
taocp-union-find = { path = "../taocp-union-find" }
